--- a/interface/jade/footer.jade
+++ b/interface/jade/footer.jade
@@ -5,26 +5,30 @@ footer(role='contentinfo')
                 .col-md-3.block-footer
                     a(href='/', title='')
                         img(src=img_url + 'logo-footer.png', alt='')
-                .col-md-6.block-footer
+                .col-md-5.block-footer
                     //-ul.menu-footer
                         li
                             a(href='/legal', title='Правовая информация') Правовая информация
                         li
                             a(href='/about', title='О сервисе') О сервисе
-                .col-md-3.block-footer
+                .col-md-4.block-footer
                     ul.menu-soc
                         li
-                            a(href='https://www.facebook.com/vseviru', title='')
-                                img(src=img_url + 'i-fb.png', alt='')
+                            a(href='http://vk.com/vsevi', title='')
+                                img(src=img_url + 'i-vk.png', alt='')
+                        li
+                            a(href='http://www.odnoklassniki.ru/group/53196730400877', title='')
+                                img(src=img_url + 'i-ok.png', alt='')
                         li
                             a(href='https://twitter.com/vseviru', title='')
                                 img(src=img_url + 'i-tw.png', alt='')
                         li
-                            a(href='http://vsevi.ru/rss/', title='')
-                                img(src=img_url + 'i-rss.png', alt='')
+                            a(href='https://www.facebook.com/vseviru', title='')
+                                img(src=img_url + 'i-fb.png', alt='')
                         li
-                            a(href='http://vk.com/vsevi', title='')
-                                img(src=img_url + 'i-vk.png', alt='')
+                            a(href='http://vsevi.ru/rss/feed', title='')
+                                img(src=img_url + 'i-rss.png', alt='')
+
         //-
            .top-footer
         .bottom-footer
