--- a/interface/jade/head.jade
+++ b/interface/jade/head.jade
@@ -1,5 +1,3 @@
-doctype html
-html(lang='ru')
 head
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
@@ -10,7 +8,7 @@ head
             |!{"<meta " + item + "/>"}
     - title = page_title_full?page_title_full:(page_title?page_title + " &mdash; ":"") + "Все видео: онлайн просмотр глобальный видео-архив фильмов, сериалов, видео-трансляций, ТВ"
     title!=title
-    - meta_keywords = page_keywords || "смотри смотреть онлайн бесплатно фильмы без регистрации скачать фильм фильмы бесплатные кино новинки 2014 (тут указывать текущий год) в хорошем качестве сериалы серии сериал сезон спортивные трансляции просмотр ТВ футбол"
+    - meta_keywords = page_keywords || "смотри смотреть онлайн бесплатно фильмы без регистрации скачать фильм фильмы бесплатные кино новинки 2014 в хорошем качестве сериалы серии сериал сезон спортивные трансляции просмотр ТВ футбол"
     - meta_descr = page_description || "У нас на сайте вы можете найти новинки фильмов в хорошем качестве или HD быстро и без регистрации. Фильмы в HD качестве и DVDRip. Каждый день новые добавления. У нас можно найти что посмотреть сегодня вечером и получить уведомления о появлении новых серий и фильмов в интернет. Больше не нужно ждать когда появится фильм онлайн, можно подписаться на уведомление о выходе."
     meta(name="keywords",content=meta_keywords)
     meta(name="description",content=meta_descr)
