--- a/interface/static/tpl/film-thumb.jade
+++ b/interface/static/tpl/film-thumb.jade
@@ -1,3 +1,3 @@
 include ../../jade/config
 include ../../jade/mixins
-mixin film_thumb({id: "NA", name: "", year: "", relation: {}, rating: {}, poster: "static/img/noposter.png", releasedate: ""})
+mixin film_thumb({id: "NA", name: "", year: "", relation: {}, rating: {}, poster: "", releasedate: ""})
